--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ BASE_PATH=/lp
 # =============================================================================
 
 # Google Analytics 4
-GA_MEASUREMENT_ID=
+GA_MEASUREMENT_ID=G-W9NSYCBMJB
 
 # Google Ads コンバージョン
 GA_ADS_ID=AW-17364030071
