chore: テンプレートからマージ

--- a/.env
+++ b/.env
@@ -27,6 +27,9 @@ YAHOO_RETARGETING_ID=
 YAHOO_CONVERSION_ID=
 YAHOO_CONVERSION_LABEL=
 
+# Microsoft Clarity
+CLARITY_PROJECT_ID=vcech3ksme
+
 # =============================================================================
 # コンバージョン設定
 # =============================================================================
